--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
                 <button class="btn btn-danger" (click)="addWishList(book)" style="width: 40px; margin: 10px;">
                     <fa-icon [icon]="faHeart" ></fa-icon>
                     </button>
-                <img  mat-card-image src="{{book.coverFileName}}" alt="p2">
+                <img  src="https://bookcart.azurewebsites.net/upload/{{book.coverFileName}}" alt="p2" style="width: 200px; height: 200px; " class="image">
                 <div>title:{{book.title}}</div>
                 <div>$ {{book.price}}</div>
 <!-- 
