--- a/src/app/components/wish-list/wish-list.component.html
+++ b/src/app/components/wish-list/wish-list.component.html
@@ -22,8 +22,8 @@
                 <tbody>
                     <tr *ngFor="let item of getWishDetails; let i = index">
                         <td style="width: 12%;">{{i+1}}</td>
-                        <td ><img src="{{item.coverFileName}}" alt=""> </td>
-                        <td style="width: 12%;">{{item.title}}</td>
+                        <td ><img src="https://bookcart.azurewebsites.net/upload/{{item.coverFileName}}" style="width: 100px; height: 100px;" alt="p1"> </td>
+                        <td style="width: 12%;"><a routerLink="/detail">{{item.title}}</a></td>
                         <td style="width: 12%;">$ {{item.price}}</td>
                         <td ><button class="btn btn-danger" (click)="removewishItem(item)"><fa-icon [icon]="faTrash" style="font-size: 20px; padding: 5px;"></fa-icon></button>   
                         </td>
